--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.0",
   "description": "A swipe (touch slide) component for Vue2.x in mobile device.",
   "author": "pspgbhu <brotherchun001@gmail.com>",
+  "repository": "https://github.com/pspgbhu/Vue2-C-Swipe-Mobile",
   "main": "src/main.js",
   "keywords": [
     "Vue",
@@ -16,7 +17,8 @@
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
     "dist": "",
-    "example": "cross-env NODE_ENV_EXAMPLE=y node build/build.js"
+    "example": "cross-env NODE_ENV_EXAMPLE=y node build/build.js",
+    "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run"
   },
   "dependencies": {
     "vue": "^2.1.0"
@@ -29,6 +31,7 @@
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
     "babel-register": "^6.0.0",
+    "chai": "^3.5.0",
     "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.1.0",
     "cross-env": "^3.1.4",
@@ -42,11 +45,23 @@
     "html-webpack-plugin": "^2.8.1",
     "http-proxy-middleware": "^0.17.2",
     "json-loader": "^0.5.4",
+    "karma": "^1.4.1",
+    "karma-coverage": "^1.1.1",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-phantomjs-shim": "^1.4.0",
+    "karma-sinon-chai": "^1.2.4",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.26",
+    "karma-webpack": "^2.0.2",
+    "mocha": "^3.2.0",
     "opn": "^4.0.2",
     "ora": "^0.3.0",
     "precss": "^1.4.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.4",
+    "sinon": "^2.1.0",
+    "sinon-chai": "^2.9.0",
     "url-loader": "^0.5.7",
     "vue-loader": "^10.0.0",
     "vue-style-loader": "^1.0.0",
@@ -59,5 +74,6 @@
   "engines": {
     "node": ">= 4.0.0",
     "npm": ">= 3.0.0"
-  }
+  },
+  "license": "MIT"
 }
