--- a/.babelrc
+++ b/.babelrc
@@ -4,7 +4,8 @@
   "comments": false,
   "env": {
     "test": {
-      "plugins": [ "istanbul" ]
+      "presets": ["es2015", "stage-2"],
+      "plugins": [ "transform-runtime" ]
     }
   }
 }
